# agent-fabric

./: .gitignore  .tool-versions  AGENTS.md  ARCHITECTURE.md  CAPABILITIES.md  CLAUDE.md  LICENSE  PLAN.md  README.md  SECURITY.md  WORKFLOW.example.md  package-lock.json  package.json  vitest.config.ts
api/: collab-tools.md  cost-policy-tools.md  cost-tools.md  fabric-tools.md  memory-tools.md  plan-chain-tools.md  project-queue-tools.md  worker-tools.md
docs/: demo-script.md  desktop-ai-design-pipeline.md  desktop-redesign-brief.md  local-private-config.md  public-feedback-post.md
elixir/: .gitignore  README.md  mix.exs
pillars/: 01-collab.md  02-memory.md  03-costs.md
src/: client.ts  costing.ts  daemon.ts  db.ts  ids.ts  paths.ts  server.ts  types.ts
test/: approval-cli.test.ts  bridge-context.test.ts  codex-bridge.test.ts  collab-live-fanout.test.ts  cost-policy.test.ts  costs.test.ts  daemon.test.ts  deepseek-worker.test.ts  desktop-server.test.ts  integration-multi-turn.test.ts  invariants.test.ts  jcode-deepseek-worker.test.ts  local-config-doctor.test.ts  phase1-correctness.test.ts  plan-chain.test.ts  privacy-guard.test.ts  project-cli.test.ts  project-queue.test.ts  schema-doc.test.ts  server.test.ts  worker.test.ts
workers/: README.md
workers/smolagents-worker/: README.md  pyproject.toml
workers/smolagents-worker/src/smolagents_worker/: __init__.py  cli.py  context_inspector.py  fabric_client.py  memory_candidates.py  project_scan.py  report.py  smolagents_runner.py
workers/smolagents-worker/tests/: test_cli.py  test_project_scan.py
(+89 files in other folders)
